--- a/WpfApplicationTest1/WpfApplicationTest1.csproj
+++ b/WpfApplicationTest1/WpfApplicationTest1.csproj
@@ -34,6 +34,7 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Newtonsoft.Json, Version=4.5.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL" />
     <Reference Include="System" />
     <Reference Include="System.Data" />
     <Reference Include="System.Numerics" />
@@ -57,6 +58,7 @@
     </ApplicationDefinition>
     <Compile Include="Entity\CellListJson.cs" />
     <Compile Include="Entity\MapJson.cs" />
+    <Compile Include="Help\JsonHelp.cs" />
     <Compile Include="MainWindowEvent.cs" />
     <Compile Include="ToolControls\ToolButton.cs" />
     <Compile Include="ToolControls\ToolListItem.xaml.cs">
