--- a/WpfApplicationTest1/WpfApplicationTest1.csproj
+++ b/WpfApplicationTest1/WpfApplicationTest1.csproj
@@ -37,6 +37,7 @@
     <Reference Include="Newtonsoft.Json, Version=12.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
       <HintPath>..\packages\Newtonsoft.Json.12.0.3\lib\net45\Newtonsoft.Json.dll</HintPath>
       <Private>True</Private>
+      <EmbedInteropTypes>False</EmbedInteropTypes>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Data" />
@@ -158,6 +159,10 @@
   <ItemGroup>
     <Resource Include="Resources\multi_selecte.png" />
   </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Resources\selecte.png" />
+  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
